--- a/contacto.html
+++ b/contacto.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
         crossorigin="anonymous">
-        <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery.min.js"></script>
 </head>
 
 <body>
-    <div class="bg-index">
-        <div class="bg-color">
+    <div class="">
+        <div class="">
             <header>
                 <div class="">
                     <!-- menu -->
@@ -56,17 +56,15 @@
         </div>
     </div>
 
-    <div class="container-fluid pl-0 pr-0">
+    <div class="container-fluid pl-0 pr-0 mb-5">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.692860584939!2d-76.93038208467371!3d3.875888349334545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e373bfac0c11d7d%3A0xa41564121f3506cb!2sCooperativa+Multiactiva+de+Transportadores+Turisticos+de+Cordoba+y+San+Cipriano+-+COOMUTRANSTUR!5e0!3m2!1ses-419!2sco!4v1540246532405"
             width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
     </div>
     <div class="container">
         <div class="row">
-
-            <div class="col-md-4">
+            <div class="col-md-6 col-lg-4">
 
                 <div class="row">
-
                     <div class="col-md-2">
                         <i class="fas fa-phone-square fa-2x align-self-center mr-1"></i>
                     </div>
@@ -76,10 +74,10 @@
                         (57) 3155777327 <br>
                         <span><small>Lunes a viernes de 8am-6pm</small></span>
                     </div>
+
                     <div class="w-100"></div>
                     <div class="col-md-2">
                         <i class="fas fa-envelope fa-2x align-self-center mr-1"></i>
-
                     </div>
                     <div class="col">
                         www.coomutranstur@hotmail.com
@@ -87,8 +85,7 @@
                 </div>
 
             </div>
-            <div class="col-md-8">
-
+            <div class="col-md-6 col-lg-8">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="well well-sm">
@@ -97,43 +94,28 @@
                                     <legend class="text-center header">Contact us</legend>
 
                                     <div class="form-group">
-                                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                                        <div class="col-md-8">
-                                            <input id="fname" name="name" type="text" placeholder="First Name" class="form-control">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-user bigicon"></i></span>
-                                        <div class="col-md-8">
-                                            <input id="lname" name="name" type="text" placeholder="Last Name" class="form-control">
-                                        </div>
+                                        <input id="fname" name="name" type="text" placeholder="First Name" class="form-control">
                                     </div>
 
                                     <div class="form-group">
-                                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-envelope-o bigicon"></i></span>
-                                        <div class="col-md-8">
-                                            <input id="email" name="email" type="text" placeholder="Email Address"
-                                                class="form-control">
-                                        </div>
+                                        <input id="lname" name="name" type="text" placeholder="Last Name" class="form-control">
                                     </div>
 
                                     <div class="form-group">
-                                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-phone-square bigicon"></i></span>
-                                        <div class="col-md-8">
-                                            <input id="phone" name="phone" type="text" placeholder="Phone" class="form-control">
-                                        </div>
+                                        <input id="email" name="email" type="text" placeholder="Email Address" class="form-control">
                                     </div>
 
                                     <div class="form-group">
-                                        <span class="col-md-1 col-md-offset-2 text-center"><i class="fa fa-pencil-square-o bigicon"></i></span>
-                                        <div class="col-md-8">
-                                            <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days."
-                                                rows="7"></textarea>
-                                        </div>
+                                        <input id="phone" name="phone" type="text" placeholder="Phone" class="form-control">
                                     </div>
 
                                     <div class="form-group">
-                                        <div class="col-md-12 text-center">
+                                        <textarea class="form-control" id="message" name="message" placeholder="Enter your massage for us here. We will get back to you within 2 business days."
+                                            rows="7"></textarea>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <div class="text-center">
                                             <button type="submit" class="btn btn-primary btn-lg">Submit</button>
                                         </div>
                                     </div>
