--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div id="fb-root"></div>
 
   <!-- INDEX -->
-  <section class="container-fluid  pl-0 pr-0" id="main">
+  <section class="container-fluid pl-0 pr-0" id="main">
     <div class="bg-index">
       <div class="bg-color">
         <header>
@@ -72,11 +72,26 @@
             </nav>
           </div>
         </header>
+        <!-- texto main -->
+        <div class="jumbotron jumbotron-fluid bg-transparent">
+          <div class="container" id="texto-main">
+            <div class="row justify-content-center align-items-center h-100">
+              <div class="col-7 text-center">
+                <!-- <p class="lead text-white">COOMOTRANSTUR</p>
+                <p class="display-4 text-white">Empresa líder en el turismo a sancipriano</p> -->
+                <p class="lead text-white">COOMOTRANSTUR</p>
+                <p class="display-4 text-white">Empresa líder en el turismo a sancipriano</p>
+                <button class="btn btn-primary btn-lg mt-5">Contáctanos</button>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- fin texto main -->
       </div>
     </div>
-    <div class="container">
-      asasdasdasd
-    </div>
+
+
+
     <div class="row justify-content-center">
       <div class="flecha-abajo">
         <a href="#nosotros"><i class="fa fa-angle-down"></i></a>
