--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         </header>
         <!-- texto main -->
         <div class="jumbotron jumbotron-fluid bg-transparent">
-          <div class="container" id="texto-main">
-            <div class="row justify-content-center align-items-center h-100">
-              <div class="col-7 text-center">
+          <div class="container">
+            <div class="row justify-content-center align-items-center">
+              <div class="col-12 col-md-6 col-xl-6 text-center">
                 <!-- <p class="lead text-white">COOMOTRANSTUR</p>
                 <p class="display-4 text-white">Empresa líder en el turismo a sancipriano</p> -->
-                <p class="lead text-white">COOMOTRANSTUR</p>
-                <p class="display-4 text-white">Empresa líder en el turismo a sancipriano</p>
+                <p class="lead text-white text-center">COOMOTRANSTUR</p>
+                <p class="display-4 text-white text-center">Empresa líder en el turismo a sancipriano</p>
                 <button class="btn btn-primary btn-lg mt-5">Contáctanos</button>
               </div>
             </div>
