--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <a class="nav-link" href="alianzas.html">Alianzas Estratégicas</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="contacto.html">Contáctenos</a>
+                    <a class="nav-link" href="#footer">Contáctenos</a>
                   </li>
                 </ul>
               </div>
@@ -272,3 +272,4 @@
 </div>
 
 </html>
+
